--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -7,8 +7,10 @@
     <ListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:divider="@android:color/black" />
 
+    <!--The empty TextView will show the info about errors displaying the data-->
     <TextView
         android:id="@id/android:empty"
         android:layout_width="match_parent"
