--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -5,14 +5,14 @@
     android:orientation="vertical">
 
     <ListView
-        android:id="@id/android:list"
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@android:color/black" />
 
     <!--The empty TextView will show the info about errors displaying the data-->
     <TextView
-        android:id="@id/android:empty"
+        android:id="@+id/empty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
